[package]
name = "INF3200-1A"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.5.0"
hex-literal = "0.4.1"
http = "1.1.0"
minreq = { version = "2.12.0", features = ["json-using-serde"] }
rocket = { version = "0.5.1", features = ["json"] }
sha1 = "0.10.6"
